# ndk_executable

./: CMakeLists.txt  main.cpp  push.sh  readme.md
